formats two lines in scores

--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css" type="text/css"/>
-        <h1>Works List</h1>
     </head>
 
     <body>
+        <h1>Works List</h1>
         <div>
             <h2>Scores</h2>
                 <ul class="nobullets">
-                    QUALITY IS FREE, an Opera, 2023 - present
-                    ghostses, a duo, commissioned by BENT DUO, 2016 - ?
+                    <li><span class="boxed">QUALITY IS FREE</span>, an Opera, 2023 - present</li>
+                    <li><span class="boxed">ghostses</span>, a duo (commissioned by BENT DUO), 2016 - 2023</li>
+
                     SCRUM, a mechanism to restart play (for Orchestra), 2016
 SLIPS, more than 2 (reading), 2015
 trunk & branches, for many voices (reading), 2015
